# papers3-zotero

./: .gitignore  CLAUDE.md  FORMAT_COMPARISON.md  LICENSE  README.md  ZOTERO_DATABASE_MAPPING.md  ZOTERO_IMPORT_RESEARCH.md  analyze_collections.py  fix_zotero_keys.py  papers3_to_zotero.py  preview_import.py  pyproject.toml  verify_import.py
papers3_scripts/: README.md  papers3_authors.py  papers3_collections.py  papers3_pdfs.py  papers3_publication_types.json  papers3_publications.py
