[project]
name = "papers3-zotero"
version = "0.1.0"
description = "Migrate Papers3 library to Zotero with full metadata preservation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chi Ho Kwok"}]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
papers3-to-zotero = "papers3_to_zotero:main"
